k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: filmapi
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: filmapi-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
